Support feedback keyboard shortcut in views login screen.

This CL supports alt+shift+i to open the feedback dialog in views login
screen.

Bug: 852242
Change-Id: I9a285c6929fd2302d22f90fbefbb32bcd814359d
Reviewed-on: https://chromium-review.googlesource.com/1102035
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567829}
Former-commit-id: b02780531c2986c564a369263e55fc74596d74b9