chrome/browser/chromeos/login/ui/fake_login_display_host.cc
@@ -134,4 +134,6 @@ void FakeLoginDisplayHost::MigrateUserData(const std::string& old_password) {}
 
 void FakeLoginDisplayHost::ResyncUserData() {}
 
+void FakeLoginDisplayHost::ShowFeedback() {}
+
 }  // namespace chromeos
