chrome/browser/chromeos/login/ui/fake_login_display_host.h
@@ -62,6 +62,7 @@ class FakeLoginDisplayHost : public LoginDisplayHost {
   void CancelPasswordChangedFlow() override;
   void MigrateUserData(const std::string& old_password) override;
   void ResyncUserData() override;
+  void ShowFeedback() override;
 
  private:
   class FakeBaseScreen;
