chrome/browser/chromeos/login/ui/login_display_host_mojo.cc
@@ -24,7 +24,10 @@
 namespace chromeos {
 
 namespace {
+
 constexpr char kLoginDisplay[] = "login";
+constexpr char kAccelSendFeedback[] = "send_feedback";
+
 }  // namespace
 
 LoginDisplayHostMojo::LoginDisplayHostMojo()
@@ -243,6 +246,12 @@ void LoginDisplayHostMojo::UpdateGaiaDialogSize(int width, int height) {
 
 const user_manager::UserList LoginDisplayHostMojo::GetUsers() {
   return users_;
+}
+
+void LoginDisplayHostMojo::ShowFeedback() {
+  DCHECK(GetOobeUI());
+  GetOobeUI()->web_ui()->CallJavascriptFunctionUnsafe(
+      "cr.ui.Oobe.handleAccelerator", base::Value(kAccelSendFeedback));
 }
 
 void LoginDisplayHostMojo::CancelPasswordChangedFlow() {
