chrome/browser/chromeos/login/ui/login_display_host_webui.cc
@@ -1165,6 +1165,10 @@ const user_manager::UserList LoginDisplayHostWebUI::GetUsers() {
   return user_manager::UserList();
 }
 
+void LoginDisplayHostWebUI::ShowFeedback() {
+  NOTREACHED();
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // external
 
